# RAG-APP

./: DOCKER.md  Dockerfile  PERFORMANCE.md  README.md  design.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  todo.md
notebooks/: 00-test.ipynb
scripts/: benchmark.py
src/rag_app/: __init__.py  app.py
src/rag_app/api/routes/: health.py  ingest.py  metrics.py  rag.py  root.py
src/rag_app/config/: logging.py  settings.py
src/rag_app/core/: cache_client.py  vector_client.py
src/rag_app/embeddings/: __init__.py  base.py  gemini.py  openai.py
src/rag_app/llm/: __init__.py  base.py  gemini.py  local.py  openai.py
src/rag_app/monitoring/: __init__.py  performance.py
src/rag_app/schemas/: ingest.py  metadata.py  metrics.py  query.py
src/rag_app/services/: ingest.py  rag.py  router.py
src/rag_app/utils/: tokenizer.py
static/: README_STREAMING.md  STREAMING_UPDATE.md  dashboard.html  index.html
static/css/: styles.css
static/js/: app.js
tests/: test_ingest.py  test_rag.py  test_router.py  test_routes.py
